== 11/22/23 ==
 - Added option to use modules for JS editor.
 - Add option to warn the user on closing the tab
 - Added developer options
 - Added help section
 - Made popups size to the screen

== 11/21/23 ==
 - Added syntax highlighting to AI generated code not in ACE mode
 - Fixed issues with AI not working sometimes
 - Made it easier to have background images

== 11/20/23 ==
 - Switching to Vercel
   - <a href="https://ashcode.vercel.app">https://ashcode.vercel.app</a>
 - Changed Popups
 - Made file menu buttons easier to click
 - Reorganized code again

 == 11/19/23 ==
 - Fixed many spelling mistakes
 - Fix and optimize CSS
 - Download Specific projects individually
 - Switched to using JS modules for better code management

 == 10/4/23 ==
 - Added signing in with accounts
   - Use on multiple devices
   - Download and upload settings
   - Sign in with your google account
   - You can still use locally without an account

 == 9/19/23 ==
 - Added AI
   - Ask Questions about your javascript
   - Option to use Ace for AI generated Code

 == 9/16/23 ==
 - Added storage meter
 - Fixed CSS for Chrome and Firefox
 - Turned into PWA (Progressive Web Application)
 - Allowed the built in console to receive html elements (note: event listeners and some types of elements, will still produce an error)

 == Roadmap == 
 - Allow users in PWA mode to "open in Ash-code"
 - Add CSS generators
   - drop-shadow
   - linear-gradient