@@ -1,4 +1,8 @@
-== 11/22/23 ==
+== 11/25/23 ==
+ - Added option to popup editor preview
+   - Can be laggy on some devices when auto update is enabled.
+ 
+== 11/23/23 ==
  - Added option to use modules for JS editor.
  - Add option to warn the user on closing the tab
  - Added developer options
